# aws-sagemaker-cdk

./: Makefile  README.md  pyproject.toml
src/lightgbm/: evaluation.py  local_pipeline.py
src/xgboost/: evaluation.py  local_pipeline.py
