[tool.poetry]
name = "aws-sagemaker-cdk"
version = "0.1.0"
description = ""
authors = ["migiwa"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"

[tool.poetry.dev-dependencies]
mypy = "^0.971"
black = {version = "^22.8.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
