[tool.poetry]
name = "aws-sagemaker-cdk"
version = "0.1.0"
description = ""
authors = ["migiwa"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
sklearn = "^0.0"
pandas = "^1.5.0"
sagemaker = {extras = ["local"], version = "^2.109.0"}
ipython = "^8.5.0"
xgboost = "^1.6.2"
lightgbm = "^3.3.2"

[tool.poetry.dev-dependencies]
mypy = "^0.971"
black = {version = "^22.8.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
